# jun

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  PRODUCTION_READINESS_AUDIT.md  README.md  build.zig  build.zig.zon  fly.toml  index.ts  package-lock.json  package.json  skills-lock.json  test.jsonl  test_zstd
.claude/commands/: benchmark.md  build-rust.md  parity-test.md  sui-release-audit.md
.zig-cache/o/4dd1693d4f170a43ba31222712d20de1/: cimport.h.d
.zig-cache/o/c5a1cf59167455292c6b66b127ffd22c/: cimport.h.d
.zig-cache/o/d5a05c1ab69a4701f4a80b7f3129c42d/: cimport.zig
configs/: balance-tracker.yml  event-indexer.yml  full-stack.yml  live-stream.yml  local-dev.yml  multi-coin-tracker.yml
crates/jun/: Cargo.toml
crates/jun-archive/: Cargo.toml
crates/jun-archive-reader/: Cargo.toml
crates/jun-archive-reader/src/: lib.rs
crates/jun-archive/src/: lib.rs
crates/jun-checkpoint-decoder/: Cargo.toml
crates/jun-checkpoint-decoder/src/: lib.rs
crates/jun-checkpoint-ingest/: Cargo.toml
crates/jun-checkpoint-ingest/src/: archive.rs  epoch.rs  lib.rs  verify.rs
crates/jun-checkpoint-stream/: Cargo.toml
crates/jun-checkpoint-stream/src/: client.rs  lib.rs  sink.rs  stream.rs
crates/jun-checkpoint-stream/tests/: mainnet_smoke.rs
crates/jun-checkpoint-verifier/: Cargo.toml
crates/jun-checkpoint-verifier/src/: lib.rs
crates/jun-clickhouse/: Cargo.toml
crates/jun-clickhouse/src/: lib.rs
crates/jun-decoder/: Cargo.toml
crates/jun-decoder/src/: lib.rs  proto.rs
crates/jun-nats/: Cargo.toml  build.rs
crates/jun-nats/proto/: jun.proto
crates/jun-nats/src/: convert.rs  lib.rs  pipe.rs
crates/jun-pipeline/: Cargo.toml
crates/jun-pipeline/src/: lib.rs
crates/jun-sqlite/: Cargo.toml
crates/jun-sqlite/src/: lib.rs
crates/jun-types/: Cargo.toml
crates/jun-types/src/: lib.rs
crates/jun/src/: main.rs
crates/jun/tests/: replay_integration.rs
docs/: checkpoint-data-model.md
examples/: auto-reload.yml  balance-indexer.ts  balance-indexer.yml  sona.ts  sona.yml
native/: balance_computer.zig  build.sh  build.zig  checkpoint_processor.zig  libcheckpoint_processor.dylib  proto_parser.zig  walrus_encoder.zig
native/lib/: libcheckpoint_processor.darwin-arm64.dylib  libcheckpoint_processor.dylib  libjun_checkpoint_decoder.darwin-arm64.dylib
native/rust-decoder/: Cargo.toml
native/rust-decoder/src/: bcs_reader.rs  binary.rs  canonical.rs  direct.rs  extract.rs  extract_checkpoint_data.rs  fetch.rs  lib.rs  parity_tests.rs  proto.rs
native/zig-out/lib/: libcheckpoint_processor.dylib
scripts/: bootstrap-clickhouse.sh  fetch-protos.ts  prefetch-worker.mjs  prefetch.mjs  test-clickhouse.ts
src/: archive-balance.test.ts  archive-balance.ts  archive.ts  auto-reload.test.ts  balance-native.ts  balance-processor.ts  bcs-provider.ts  binary-parser.ts  broadcast.ts  buffer.test.ts  buffer.ts  cache.ts  checkpoint-decoder-pool.ts  checkpoint-decoder.ts  checkpoint-native-decoder.ts  checkpoint-processor-native.ts  checkpoint-response.ts  checkpoints.ts  cli-helpers.test.ts  cli-helpers.ts  cli.test.ts  cli.ts  codegen.test.ts  codegen.ts  config.ts  cursor.ts  db.ts  decompiler-native.ts  decompiler-wasm.ts  decompiler.ts  events.ts  gaps.test.ts  gaps.ts  grpc.ts  hot-reload.test.ts  hot-reload.ts  index.ts  indexer-config.test.ts  indexer-config.ts  logger.ts  (+33 more)
src/output/: balance-writer.ts  parquet.ts  postgres.ts  sqlite-storage.test.ts  sqlite-storage.ts  sqlite.ts  storage.ts
src/pipeline/: config-parser.ts  pipeline-features.test.ts  pipeline.ts  types.ts  write-buffer.ts  writer.ts
src/pipeline/destinations/: clickhouse.ts  nats.ts  parquet.ts  per-table-postgres.ts  per-table-sqlite.ts  postgres.ts  sql-ddl.ts  sql-web.ts  sql.test.ts  sql.ts  sqlite.ts  sse.ts  stdout.ts
src/pipeline/processors/: balance-tracker.ts  balanceChanges.ts  commands.ts  dependencies.ts  event-decoder.ts  events.ts  objectChanges.ts  rawEvents.ts  systemTransactions.ts  transaction-tracker.ts  transactionBlocks.ts  transactionInputs.ts  unchangedConsensusObjects.ts
src/pipeline/sources/: archive-web.ts  archive.ts  grpc-web.ts  grpc.ts
src/pipeline/writers/: postgres.ts  sqlite.ts  sqlite.worker.ts
src/types/: nats.ts
tasks/: baseline-benchmark.md  codex-bcs-fast-path-tests.md  codex-custom-bcs-extractor.md  codex-per-table-sqlite.md  codex-rust-fetch-decode.md  codex-sqlite-prepared-statements.md  codex-sqlite-sharding.md
tests/: broadcast.integration.test.ts
