[workspace]
resolver = "2"
members = [
    "crates/jun-types",
    "crates/jun-archive",
    "crates/jun-decoder",
    "crates/jun-clickhouse",
    "crates/jun-sqlite",
    "crates/jun-pipeline",
    "crates/jun",
]
# The legacy cdylib that Bun loads via FFI lives at native/rust-decoder/ and is
# excluded from this workspace so its cargo state doesn't interfere with the new
# native binary crates during the rewrite. It will be deleted once jun-indexer
# reaches feature parity and Bun is removed.
exclude = ["native/rust-decoder"]

[workspace.package]
edition = "2021"
version = "0.2.0"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Shared across all jun-* crates. Pin versions here, not in individual crates.

# Async runtime + HTTP
tokio       = { version = "1", features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "zstd", "json"] }
bytes       = "1"
futures     = "0.3"

# Sui types — track mainnet. Bump the branch -> rev pin when sui-types changes
# break. For stable re-playability pin a specific rev.
sui-types   = { git = "https://github.com/MystenLabs/sui.git", branch = "mainnet" }

# Serde + BCS for Sui data
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bcs         = "0.1"

# Hashing / encoding
blake2      = "0.10"
bs58        = "0.5"
hex         = "0.4"
zstd        = "0.13"
bitflags    = "2"

# Error / logging
anyhow      = "1"
thiserror   = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap        = { version = "4", features = ["derive", "env"] }

# SQLite
rusqlite    = { version = "0.32", features = ["bundled"] }

# gRPC (stream command)
tonic       = { version = "0.12", default-features = false, features = ["codegen", "transport", "tls-native-roots", "prost"] }
prost       = "0.13"

# Internal crate references (workspace paths)
jun-types       = { path = "crates/jun-types" }
jun-archive     = { path = "crates/jun-archive" }
jun-decoder     = { path = "crates/jun-decoder" }
jun-clickhouse  = { path = "crates/jun-clickhouse" }
jun-sqlite      = { path = "crates/jun-sqlite" }
jun-pipeline    = { path = "crates/jun-pipeline" }

[profile.release]
lto         = "fat"
codegen-units = 1
opt-level   = 3
strip       = "debuginfo"
