[package]
name = "jun-archive"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow    = { workspace = true }
thiserror = { workspace = true }
tokio     = { workspace = true }
reqwest   = { workspace = true }
bytes     = { workspace = true }
serde     = { workspace = true }
serde_json = { workspace = true }
tracing   = { workspace = true }
zstd      = { workspace = true }
futures   = { workspace = true }
async-stream = "0.3"
