[package]
name = "jun-checkpoint-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Live Sui fullnode gRPC subscription + decode for jun. Wraps sui-rpc SubscriptionService with reconnect/resume."

[dependencies]
jun-types   = { workspace = true }
jun-checkpoint-decoder = { workspace = true }
sui-types   = { workspace = true }
bcs         = { workspace = true }

# Pull the prost-generated SubscriptionService client straight from sui-rust-sdk.
# Tracks the same rev sui-types pulls in transitively (already in Cargo.lock).
sui-rpc     = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "7b020c71d12616c9674b34874f526ac3aa6e5e64" }

anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
# Pinned to match sui-rpc 0.2.2's tonic/prost (workspace tonic is on 0.12 for
# legacy reasons; jun-checkpoint-stream has no public tonic surface so the version split
# stays internal).
tonic       = { version = "0.14", default-features = false, features = ["codegen", "transport", "tls-native-roots", "channel", "zstd", "gzip"] }
tonic-prost = "0.14"
prost       = "0.14"
prost-types = "0.14"
http        = "1"
serde       = { workspace = true }
serde_json  = { workspace = true }
sonic-rs    = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait  = "0.1"

# Optional sinks. Keep deps narrow so the lean-tree pitch holds.
async-nats  = { version = "0.39", optional = true }

[features]
default = []
nats    = ["dep:async-nats"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
