[package]
name = "jun-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
jun-archive-reader    = { workspace = true }
jun-checkpoint-decoder    = { workspace = true }
jun-types      = { workspace = true }
anyhow         = { workspace = true }
async-trait    = "0.1"
flume          = "0.11"
tokio          = { workspace = true }
futures        = { workspace = true }
tracing        = { workspace = true }
bytes          = { workspace = true }
